@startuml
title Factory Method Design Pattern

interface Product {
    + use() : void
}

class ConcreteProductA {
    + use() : void
}

class ConcreteProductB {
    + use() : void
}

Product <|-- ConcreteProductA
Product <|-- ConcreteProductB

interface Creator {
    + createProduct() : Product
}

class ConcreteCreatorA {
    + createProduct() : Product
}

class ConcreteCreatorB {
    + createProduct() : Product
}

Creator <|-- ConcreteCreatorA
Creator <|-- ConcreteCreatorB
Creator o-- Product

@enduml